# backend-sprint

./: README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  models.py  routes.py  user_routes.py  utils.py
app/api/v1/: auth_routes.py  todo_routes.py
frontend/src/: App.tsx  api.ts
migrations/versions/: 1c68c4e8e512_init_user_and_todo_models_with_extended_.py  d4a7a89b57ff_create_todo_model.py  d6cdbfd12c95_init_use_and_todo_models.py
