[project]
name = "backend-sprint"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11,<4.0"

dependencies = [
    "flask",
    "flask-cors",
    "Flask-Migrate",
    "Flask-SQLAlchemy",
    "SQLAlchemy-Utils",
    "python-dotenv",
    "flask-bcrypt",
    "flask-jwt-extended",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "black",
    "flake8",
    "isort",
    "mypy_extensions",
    "pytest>=9.0.2",
]
